--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-minimal
+logo: natalie/assets/img/nat-headshot.jpg
+description: Counseling and Psychology Services for Adults and Teens
+title: Dr Natalie Richton Phd
+
+        
