--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-logo: natalie/assets/img/nat-headshot.jpg
+logo: /assets/img/nat-headshot.png
 description: Counseling and Psychology Services for Adults and Teens
 title: Dr Natalie Richton Phd
 
