--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 logo: /assets/img/nat-headshot.png
-description: Counseling and Psychology Services for Adults and Teens
-title: Dr Natalie Richton Phd
+description: Counseling and Psychology Services for Adults and Teens in New York and Connecticut
+title: Dr Natalie Richton, Phd
 
         
