--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
 baseurl: "/Type-on-Strap"
-url: "http://drnatalierichton.com"
+url: "https://sylhare.github.io"
 title: Dr. Natalie Richton # site's title
 description: "Counseling services for Adults and teens in New York and Connecticut. Specialized in: anxiety, eating disorders, marriage counseling and general psychology treatment." # used by search engines
 
