--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # SITE CONFIGURATION
 baseurl: "/Type-on-Strap"
 url: "https://sylhare.github.io"
-title: Dr. Natalie Richton # site's title
-description: "Counseling services for Adults and teens in New York and Connecticut. Specialized in: anxiety, eating disorders, marriage counseling and general psychology treatment." # used by search engines
+title: Type on Strap # site's title
+description: "A website with blog posts and pages" # used by search engines
 
 
 # THEME-SPECIFIC CONFIGURATION
@@ -29,7 +29,7 @@ theme_settings:
   facebook:
   flickr:
   gitlab:
-  github: 
+  github: "sylhare"
   google_plus:
   instagram:
   keybase:
