--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,8 @@ theme_settings:
   # Meta
   title: Dr. Natalie Richton Phd # blog's title
   avatar: /assets/img/hands-icon.png
-  favicon: /assets/img/hands-icon.png
+  favicon: /assets/img/dnr-icon.png
+      
   gravatar: # Email MD5 hash
 
   # Header and footer text
