--- a/_config.yml
+++ b/_config.yml
@@ -92,9 +92,8 @@ css_inline: true # Will insert all styles into a single <style> block in the <he
 navigation_header:
   Home: /
   Services: /categories/
-  About: /blog/
-  Search: /search/
-  Contact: /elements
+  Blog: /blog/
+  Contact: /contact
 
 
 navigation_footer:
