--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ css_inline: true # Will insert all styles into a single <style> block in the <he
 navigation_header:
   Home: /
   Services: /services/
-  Blog: /blog/
+# Blog: /blog/
   Contact: /contact
 
 
